==> carl-tud/RIOT-Pull-Requests/cpu/lpc1768/periph/uart.c <==
// SPDX-FileCopyrightText: 2014 Freie Universität Berlin
// SPDX-License-Identifier: LGPL-2.1-only

/// @ingroup     cpu_lpc1768
/// @ingroup     drivers_periph_uart
/// @{
///
/// @file
/// @brief       Implementation of the low-level UART driver for the LPC1768
///
/// @author      Hauke Petersen <hauke.petersen@fu-berlin.de>
/// @}

#include <assert.h>
#include <stdint.h>

#include "cpu.h"
#include "periph/uart.h"
#include "periph_conf.h"

/// @brief UART device configurations
static uart_isr_ctx_t config[UART_NUMOF];

static inline void init_base(uart_t uart, uint32_t baudrate);

/// @brief   Get the UART register base for a UART instance
///
/// @param[in] uart  index of the UART instance
///
/// @return          base address
static inline LPC_UART_TypeDef *dev(uart_t uart) {
    assert(uart < UART_NUMOF);

    return ((LPC_UART_TypeDef *)uart_config[uart].dev);
}

int uart_init(uart_t uart, uint32_t baudrate, uart_rx_cb_t rx_cb, void *arg) {
    assert(uart < UART_NUMOF);
    init_base(uart, baudrate);

    // save callbacks
    config[uart].rx_cb = rx_cb;
    config[uart].arg = arg;

    // configure and enable global device interrupts
    NVIC_SetPriority(uart_config[uart].irq_rx, UART_IRQ_PRIO);
    NVIC_EnableIRQ(uart_config[uart].irq_rx);
    // enable RX interrupt
    dev(uart)->IER |= (1 << 0);

    return UART_OK;
}

static inline void init_base(uart_t uart, uint32_t baudrate) {
    assert(uart < UART_NUMOF);
    const uart_conf_t *cfg = &uart_config[uart];
    // The RX/TX must be together
    assert(cfg->pinsel_shift <= 27);
    // power on UART device and select peripheral clock
    LPC_SC->PCONP |= (1 << cfg->clk_offset);
    if (cfg->clk_offset >= 16) {
        LPC_SC->PCLKSEL1 &= ~((uint32_t)0x3 << ((cfg->clk_offset - 16) * 2));
    }
    else {
        LPC_SC->PCLKSEL0 &= ~((uint32_t)0x3 << (cfg->clk_offset * 2));
    }
    // PCLKSEL cleared to 00 means PCLK = CCLK / 4
    uint32_t pclk = CLOCK_CORECLOCK / 4;
    // calculate divisor: DL = PCLK / (16 * baudrate), with rounding
    uint16_t dl = (pclk + (8 * baudrate)) / (16 * baudrate);
    // set mode to 8N1 and enable access to divisor latch
    dev(uart)->LCR = ((0x3 << 0) | (1 << 7));
    // set baud rate divisor registers
    dev(uart)->DLM = (dl >> 8) & 0xFF;
    dev(uart)->DLL = dl & 0xFF;
    // enable FIFOs
    dev(uart)->FCR = 1;

    // Clear register for mux selection
    *(&LPC_PINCON->PINSEL0 + cfg->pinsel) &=
        ~((uint32_t)0xF << (cfg->pinsel_shift * 2));
    // Select uart TX mux
    *(&LPC_PINCON->PINSEL0 + cfg->pinsel) |=
        ((uint32_t)cfg->pinsel_af << (cfg->pinsel_shift * 2));
    // Select uart RX mux
    *(&LPC_PINCON->PINSEL0 + cfg->pinsel) |=
        ((uint32_t)cfg->pinsel_af << (cfg->pinsel_shift * 2 + 2));
    // Clear modes for RX and TX pins
    *(&LPC_PINCON->PINMODE0 + cfg->pinsel) &=
        ~((uint32_t)0xF << (cfg->pinsel_shift * 2));
    // Set TX mode
    *(&LPC_PINCON->PINMODE0 + cfg->pinsel) |=
        ((uint32_t)0x2 << (cfg->pinsel_shift * 2));
    // Set RX mode
    *(&LPC_PINCON->PINMODE0 + cfg->pinsel) |=
        ((uint32_t)0x2 << (cfg->pinsel_shift * 2 + 2));
    // disable access to divisor latch
    dev(uart)->LCR &= ~(1 << 7);
}

void uart_write(uart_t uart, const uint8_t *data, size_t len) {
    assert(uart < UART_NUMOF);
    for (size_t i = 0; i < len; i++) {
        // wait for transmission holding (THRE) bit to be set
        while (!(dev(uart)->LSR & (1 << 5))) {}
        dev(uart)->THR = data[i];
    }
    // wait for transmission empty (TEMT) bit to be set
    while (!(dev(uart)->LSR & (1 << 6))) {}
}

void uart_poweron(uart_t uart) {
    assert(uart < UART_NUMOF);
    LPC_SC->PCONP |= (1 << uart_config[uart].clk_offset);
}

void uart_poweroff(uart_t uart) {
    assert(uart < UART_NUMOF);
    LPC_SC->PCONP &= ~(1 << uart_config[uart].clk_offset);
}

static void irq_handler(uart_t uart) {
    assert(uart < UART_NUMOF);
    if (dev(uart)->LSR & (1 << 0)) {
        uint8_t data = (uint8_t)dev(uart)->RBR;
        config[uart].rx_cb(config[uart].arg, data);
    }
    cortexm_isr_end();
}

#ifdef UART_0_ISR
void UART_0_ISR(void) {
    irq_handler(UART_DEV(0));
}
#endif

#ifdef UART_1_ISR
void UART_1_ISR(void) {
    irq_handler(UART_DEV(1));
}
#endif

#ifdef UART_2_ISR
void UART_2_ISR(void) {
    irq_handler(UART_DEV(2));
}
#endif

#ifdef UART_3_ISR
void UART_3_ISR(void) {
    irq_handler(UART_DEV(3));
}
#endif
